--- a/add-files/strassen_segmente_testgebiet_mapping.json
+++ b/add-files/strassen_segmente_testgebiet_mapping.json
@@ -1,46 +1,41 @@
-[
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "segments", "column": "id"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "segments", "column": "street_id"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "segments", "column": "street_type"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "segments", "column": "geometry"}
-    },
-    {
-        "city_data": {"pop_level_1": "properties", "prop_level_2": "laenge_m"},
-        "postgres": {"table": "segments", "column": "length_m"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "streets", "column": "id"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "streets", "column": "name"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "tags", "column": "id"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "tags", "column": "key"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "tags", "column": "value"}
-    },
-    {
-        "city_data": {"pop_level_1": "", "prop_level_2": ""},
-        "postgres": {"table": "tags", "column": "segment_id"}
-    }
-]
+{
+    "transmission_order" : [
+        "streets",
+        "segments"
+    ],
+    "tables_primary_keys" : [
+        {"table" : "streets", "key" : "id"},
+        {"table" : "segments", "key" : "id"}
+    ],
+    "mapping" : [
+        {
+            "city_data": {"prop_level_1": "properties", "prop_level_2": "objectid"},
+            "postgres": {"table": "segments", "column": "id"}
+        },
+        {
+            "city_data": {"prop_level_1": "properties", "prop_level_2": "str_nr"},
+            "postgres": {"table": "segments", "column": "street_id"}
+        },
+        {
+            "city_data": {"prop_level_1": "properties", "prop_level_2": "sstrgsname"},
+            "postgres": {"table": "segments", "column": "street_type"}
+        },
+        {
+            "city_data": {"prop_level_1": "geometry", "prop_level_2": "coordinates"},
+            "postgres": {"table": "segments", "column": "geometry"},
+            "transformation" : "coordinates_to_json"
+        },
+        {
+            "city_data": {"prop_level_1": "properties", "prop_level_2": "laenge_m"},
+            "postgres": {"table": "segments", "column": "length_m"}
+        },
+        {
+            "city_data": {"prop_level_1": "properties", "prop_level_2": "str_nr"},
+            "postgres": {"table": "streets", "column": "id"}
+        },
+        {
+            "city_data": {"prop_level_1": "properties", "prop_level_2": "str"},
+            "postgres": {"table": "streets", "column": "name"}
+        }
+    ]
+}
