added verkehrsflaechen to DB added segm_gid to verkehrsflaechen and segments table added verkehrsflächen json - files

--- a/add-files/load_data_config.json
+++ b/add-files/load_data_config.json
@@ -4,6 +4,10 @@
         {
             "file_path": "strassen_segmente_testgebiet.json",
             "mapping_path": "strassen_segmente_testgebiet_mapping.json"
+        },
+        {
+            "file_path": "Verkehrsflaeche_Breite_Testgebiet.json",
+            "mapping_path": "verkehrsflaechen_testgebiet_mapping.json"
         }
     ]
 }
