--- a/add-files/strassen_segmente_testgebiet_mapping.json
+++ b/add-files/strassen_segmente_testgebiet_mapping.json
@@ -22,6 +22,10 @@
             "postgres": {"table": "segments", "column": "street_type"}
         },
         {
+            "path_to_property": ["properties", "segm_gid"],
+            "postgres": {"table": "segments", "column": "segm_gid"}
+        },
+        {
             "path_to_property": ["geometry", "coordinates"],
             "postgres": {"table": "segments", "column": "geometry"},
             "transformation" : "coordinates_to_json"
