added table for segmentation of segments, changed name of coordinate column from geometry to geom_coordinates,

--- a/add-files/verkehrsflaechen_testgebiet_mapping.json
+++ b/add-files/verkehrsflaechen_testgebiet_mapping.json
@@ -35,7 +35,7 @@
         },
         {
             "path_to_property": ["geometry", "coordinates"],
-            "postgres": {"table": "trafficareas", "column": "geometry"},
+            "postgres": {"table": "trafficareas", "column": "geom_coordinates"},
             "transformation" : "coordinates_to_json"
         }
     ]
