added ortsteile to database and data to git

--- a/add-files/load_data_config.json
+++ b/add-files/load_data_config.json
@@ -8,6 +8,11 @@
         {
             "file_path": "leipzig_verkehrsflaechen_breite_gdi_merged_20230504_CLEANED.json",
             "mapping_path": "verkehrsflaechen_testgebiet_mapping.json"
+        },
+        {
+            "file_path": "leipzig_ortsteile.json",
+            "mapping_path": "ortsteile_mapping.json"
         }
+
     ]
 }
