db_schema: -added recording year for cycloemdai and air img table -added coordinates of segments and ortsteile
DB helpers:
renamed path to json_path (because path is saved for python)

load_city_data:
-added transformation to import json to DB

--- a/add-files/ortsteile_mapping.json
+++ b/add-files/ortsteile_mapping.json
@@ -23,6 +23,11 @@
         {
             "path_to_property": ["properties", "ot_name"],
             "postgres": {"table": "ortsteile", "column": "ot_name"}    
+        },
+        {
+            "path_to_property": ["geometry"],
+            "postgres": {"table": "ortsteile", "column": "geometry"},    
+            "transformation" : "geom_to_json"
         }
         ]
     }
