added method to convert coordinates in ortsteile file from 4326 to 25833 for postgis

--- a/add-files/load_data_config.json
+++ b/add-files/load_data_config.json
@@ -10,7 +10,7 @@
             "mapping_path": "verkehrsflaechen_testgebiet_mapping.json"
         },
         {
-            "file_path": "leipzig_ortsteile.json",
+            "file_path": "leipzig_ortsteile_CLEANED.json",
             "mapping_path": "ortsteile_mapping.json"
         }
 
