--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ jinja2==3.1.2
 markupsafe==2.1.2
 numpy==1.24.2
 pandas==1.5.3
-psycopg2==2.8.6
+psycopg2-binary
 pysocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.7.1
